# titanmind-whatsapp-mcp

./: .gitignore  README.md  main.py  pyproject.toml
src/: test.py
src/titan_mind/: engage.py  networking.py  server.py  titan_mind_functions.py  whatsapp.py
src/titan_mind/utils/app_specific/: utils.py
