[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "titan-mind-mcp"
version = "0.1.0"
description = "MCP server for WhatsApp functionality via TitanEngage"
authors = [
    {name = "Shubhashish", email = "shubhashish@salarybox.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.32.3",
    "pydantic>=2.5.0",
    "pydantic-core>=2.14.0",
    "requests_oauthlib>=2.0.0"
]

[project.scripts]
titan-mind-mcp = "titan_mind.server:main"

[tool.setuptools]
packages = ["titan_mind"]
package-dir = {"" = "src"}

