[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

# To upload to pypi
# use ```rm -rf dist/``` to clean build folder,
# use ```python -m build``` to build
# and use ```twine upload dist/*``` to upload the build

[project]
name = "titanmind-whatsapp-mcp"
version = "0.1.5"
description = "MCP server for WhatsApp functionality via Titanmind"
authors = [
    {name = "Shubhashish", email = "shubhashish@salarybox.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.32.3",
    "pydantic>=2.5.0",
    "pydantic-core>=2.14.0",
    "requests_oauthlib>=2.0.0",
    "python-dotenv>=1.1.1"
]

# command/script to run the whole package --> titan-mind-mcp. it directly runs the server file in src/titan_mind
[project.scripts]
titan-mind-mcp = "titan_mind.server:main"

[tool.setuptools]
packages = ["titan_mind"]
package-dir = {"" = "src"}


[tool.pdm]
distribution = true

license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TitanmindAGI/titan-mind-whatsapp-mcp"
"Repository" = "https://github.com/TitanmindAGI/titan-mind-whatsapp-mcp"

